deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iccsys-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: iccsys-prod
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iccsys-prod
    spec:
      containers:
        - image: scgskku/iccsys-prod
          imagePullPolicy: Always
          name: iccsys-prod
          ports:
            - containerPort: 8091
