service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iccsys-prod
spec:
  ports:
    - port: 80
      targetPort: 8091
      protocol: TCP
  selector:
    app.kubernetes.io/name: iccsys-prod
