ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iccsys-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"

spec:
  tls:
    - hosts:
        - iccsys.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: iccsys.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: iccsys-prod-service
                port:
                  number: 80
            path: /
            pathType: Prefix
